# WavePilot

./: .gitignore  .pylintrc  data.py  dataset_preprocess.py  interpolator.py  logger.py  model.py  optim_grid.py  optimization.py  optimization.spec  plugin_controller.py  plugin_renderer.py  plugin_setter.py  pyproject.toml  tester.py  train.py  utils.py  vae_model.py  visualizer.py
.github/workflows/: check-commit.yaml
addresses/: OB-Xd.json  adaptiverb.json
max/: wavepilot_controller.maxpat
multithread_tests/: setter.maxpat
multithread_tests/Backups/: WP-Adaptiverb-Tester-2024-11-28_132052.rpp-bak  WP-Adaptiverb-Tester-2024-11-28_135230.rpp-bak  WP-Adaptiverb-Tester-2024-11-28_135236.rpp-bak  WP-Adaptiverb-Tester-2024-11-28_135513.rpp-bak  WP-Adaptiverb-Tester-2024-11-29_145956.rpp-bak  WP-Adaptiverb-Tester-2024-11-29_184747.rpp-bak  WP-Adaptiverb-Tester-2024-12-01_180711.rpp-bak  WP-Adaptiverb-Tester-2024-12-01_181042.rpp-bak  WP-OBXd-Tester-2024-11-28_131908.rpp-bak  WavePilot-Tester-2024-11-27_172225.rpp-bak  WavePilot-Tester-2024-11-27_173008.rpp-bak  WavePilot-Tester-2024-11-27_173012.rpp-bak  WavePilot-Tester-2024-11-28_131713.rpp-bak
multithread_tests/Media/peaks/: PML_DPV5_Shakerloop_029_126BPM.wav.reapeaks
reaper/Backups/: WP-OBXd-Tester-2025-01-13_165346.rpp-bak
