[tool.poetry]
name = "wavepilot"
version = "0.1.0"
description = "Tool for Reducing and Visualizing Digital Instrument Presets in an Explorable 3D Virtual Space"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
scipy= "1.11.4"
plotly="5.18.0"
pandas="2.1.4"
scikit-learn="1.3.2"
flask="3.0.3"
flask-socketio="5.3.6"
optuna="3.5.0"
numpy="1.26.4"
sounddevice="0.4.6"
torch="2.3.0"
torchviz="0.0.2"
pytest = "^8.3.4"
pylint = "^3.3.3"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
